# libjson

./: CMakeLists.txt  Makefile  README.md  ds.c  ds.h  json.c  json.h
examples/: closure_example.c  create_json.c  example_closure.c  example_json_creation.c  example_json_manipulation.c  example_json_parsing.c  example_json_read.c  json_manipulation.c  simple_parse.c
include/libjson/: closure.h  (+7 more)
src/: closure.c  ds.c  hash_table.c  json.c  json5_read.c  json_creation.c  json_internal.c  json_internal.h  json_manipulation.c  json_read.c  json_types.c  json_write.c  linked_list.c  linked_list_json.c
tests/: old_test_json_array_manipulation.c  old_test_json_object_manipulation.c  old_test_json_string_escape.c  test_json5_basic.c  test_json5_comments.c  test_json5_compatibility.c  test_json5_complex_identifiers.c  test_json5_edge_cases.c  test_json5_empty_input.c  test_json5_file.c  test_json5_keywords.c  test_json5_mixed_features.c  test_json5_quote_mixing.c  test_json5_single_quotes.c  test_json5_trailing_commas.c  test_json5_unquoted_keys.c  test_json_array_elements.c  test_json_array_empty.c  test_json_array_manipulation.c  test_json_array_push.c  test_json_copy_complex.c  test_json_copy_empty_array.c  test_json_copy_empty_object.c  test_json_copy_object.c  test_json_creation.c  test_json_default_errbuf_failure.c  test_json_default_errbuf_success.c  test_json_false.c  test_json_manipulation.c  test_json_null.c  test_json_number.c  test_json_number_boundary.c  test_json_object_empty.c  test_json_object_manipulation.c  test_json_object_remove.c  test_json_parsing.c  (+14 more)
